--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,27 @@ jobs:
     #runs-on: buildjet-2vcpu-ubuntu-2004
     #runs-on: buildjet-64vcpu-ubuntu-2004
     steps:
+    - name: users
+        shell: bash
+        run: |
+            sudo -u ubuntu -n bash -c 'sudo -n useradd runner --non-unique -u $UID -g $UID' || true
+            sudo -u ubuntu -n bash -c 'sudo -n groupadd runner --non-unique -g $UID' || true
+            sudo -u runner -n bash -c 'sudo -n echo $USER $UID' || true
+            true
+        # Apparently may increase buildJet 'runner' to 77GB (instead of 61GB).
+        # Apparently may increase Github Actions 'runner' to 59GB (instead of 31GB) .
+    - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+            #root-reserve-mb: 512
+            root-reserve-mb: 1024
+            #temp-reserve-mb: 100
+            temp-reserve-mb: 300
+            #swap-size-mb: 128
+            swap-size-mb: 192
+            remove-dotnet: 'true'
+            remove-android: 'true'
+            remove-haskell: 'true'
     - uses: actions/checkout@v2
     - name: _getMinimal_cloud
       shell: bash
@@ -58,6 +79,27 @@ jobs:
     #runs-on: buildjet-2vcpu-ubuntu-2004
     #runs-on: buildjet-64vcpu-ubuntu-2004
     steps:
+    - name: users
+        shell: bash
+        run: |
+            sudo -u ubuntu -n bash -c 'sudo -n useradd runner --non-unique -u $UID -g $UID' || true
+            sudo -u ubuntu -n bash -c 'sudo -n groupadd runner --non-unique -g $UID' || true
+            sudo -u runner -n bash -c 'sudo -n echo $USER $UID' || true
+            true
+        # Apparently may increase buildJet 'runner' to 77GB (instead of 61GB).
+        # Apparently may increase Github Actions 'runner' to 59GB (instead of 31GB) .
+    - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+            #root-reserve-mb: 512
+            root-reserve-mb: 1024
+            #temp-reserve-mb: 100
+            temp-reserve-mb: 300
+            #swap-size-mb: 128
+            swap-size-mb: 192
+            remove-dotnet: 'true'
+            remove-android: 'true'
+            remove-haskell: 'true'
     - uses: actions/checkout@v2
     - name: _getMinimal_cloud
       shell: bash
