--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,19 +59,19 @@ jobs:
       run: |
         ./ubiquitous_bash.sh _export_cloud_lts
       timeout-minutes: 90
-    - name: artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: build-lts
-        path: |
-          ./_local/_export/linux-lts-amd64-debian.tar.gz
+    #- name: artifacts
+      #uses: actions/upload-artifact@v3
+      #with:
+        #name: build-lts
+        #path: |
+          #./_local/_export/linux-lts-amd64-debian.tar.gz
     - name: release! linux-lts-amd64-debian
       uses: softprops/action-gh-release@v1
       with:
         tag_name: build-${{ github.run_id }}-${{ github.run_attempt }}
         name: build-lts
-        #files: |
-          #./_local/_export/linux-lts-amd64-debian.tar.gz
+        files: |
+          ./_local/_export/linux-lts-amd64-debian.tar.gz
       timeout-minutes: 45
   build_mainline:
     runs-on: ubuntu-latest
@@ -131,13 +131,19 @@ jobs:
       with:
         limit-access-to-actor: true
       timeout-minutes: 5
+    #- name: artifacts
+      #uses: actions/upload-artifact@v3
+      #with:
+        #name: build-mainline
+        #path: |
+          #./_local/_export/linux-mainline-amd64-debian.tar.gz
     - name: release! linux-mainline-amd64-debian
       uses: softprops/action-gh-release@v1
       with:
         tag_name: build-${{ github.run_id }}-${{ github.run_attempt }}
         name: build-mainline
-        #files: |
-         #./_local/_export/linux-mainline-amd64-debian.tar.gz
+        files: |
+         ./_local/_export/linux-mainline-amd64-debian.tar.gz
       timeout-minutes: 45
 
 
