--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,7 +69,7 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         tag_name: build-${{ github.run_id }}-${{ github.run_attempt }}
-        name: build-lts
+        name: build
         files: |
           ./_local/_export/linux-lts-amd64-debian.tar.gz
       timeout-minutes: 45
@@ -141,7 +141,7 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         tag_name: build-${{ github.run_id }}-${{ github.run_attempt }}
-        name: build-mainline
+        name: build
         files: |
          ./_local/_export/linux-mainline-amd64-debian.tar.gz
       timeout-minutes: 45
