--- a/.github/workflows/menuconfig-lts.yml
+++ b/.github/workflows/menuconfig-lts.yml
@@ -53,12 +53,19 @@ jobs:
       run: |
         ./ubiquitous_bash.sh _fetchKernel_lts
       timeout-minutes: 180
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
-      # ssh -i <path-to-key> <tmate-connection-string>
+    #- name: Setup tmate session
+      #uses: mxschmitt/action-tmate@v3
+      ## ssh -i <path-to-key> <tmate-connection-string>
+      #with:
+          #limit-access-to-actor: true
+      #timeout-minutes: 320
+    - name: Setup upterm session
+      uses: lhotari/action-upterm@v1
       with:
-          limit-access-to-actor: true
-      timeout-minutes: 320
+        ## limits ssh access and adds the ssh public key for the user which triggered the workflow
+        limit-access-to-actor: true
+        ## limits ssh access and adds the ssh public keys of the listed GitHub users
+        #limit-access-to-users: githubuser1,githubuser2
     - name: artifacts
       uses: actions/upload-artifact@v3
       with:
