--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -56,40 +56,28 @@ jobs:
       # Apparently may increase buildJet 'runner' to 77GB (instead of 61GB).
       # Apparently may increase Github Actions 'runner' to 59GB (instead of 31GB) .
     - name: Maximize build space
+      if: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
       uses: easimon/maximize-build-space@master
       with:
-        #root-reserve-mb: 512
-        root-reserve-mb: 2048
-        #temp-reserve-mb: 100
-        temp-reserve-mb: 300
-        #swap-size-mb: 128
-        swap-size-mb: 192
+        root-reserve-mb: 1625
+        temp-reserve-mb: 50
+        swap-size-mb: 2
+        #remove-dotnet: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
         remove-dotnet: 'true'
+        #remove-android: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
         remove-android: 'true'
+        #remove-haskell: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
         remove-haskell: 'true'
+        #remove-codeql: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
+        remove-codeql: 'true'
+        #remove-docker-images: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
+        remove-docker-images: 'true'
     - uses: actions/checkout@v2
     - name: _getMinimal_cloud
       shell: bash
       run: |
         ./ubiquitous_bash.sh _getMinimal_cloud
       timeout-minutes: 90
-    - name: _build_cloud_lts
-      shell: bash
-      run: |
-        ./ubiquitous_bash.sh _build_cloud_prepare
-        ./ubiquitous_bash.sh _build_cloud_lts
-      timeout-minutes: 300
-    - name: _export_cloud_lts
-      shell: bash
-      run: |
-        ./ubiquitous_bash.sh _export_cloud_lts
-      timeout-minutes: 90
-    #- name: artifacts
-      #uses: actions/upload-artifact@v3
-      #with:
-        #name: build-lts
-        #path: |
-          #./_local/_export/linux-lts-amd64-debian.tar.gz
   check_mainline:
     runs-on: ${{ github.event.inputs.runnerName == '' && 'ubuntu-latest' || github.event.inputs.runnerName }}
     #runs-on: ubuntu-20.04
