--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,21 @@ permissions:
 
 on:
   workflow_dispatch:
+    inputs:
+      runnerName:
+        required: false
+        default: ubuntu-latest
+        type: choice
+        options:
+        - ubuntu-latest
+        - ubuntu-latest-h
+      forceKernel_mainline:
+        required: false
+        default: latest
+        type: choice
+        options:
+        - latest
+        - 6.5.
   # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
   schedule:
     #- cron: '5 1 * * 6'
@@ -48,17 +63,22 @@ jobs:
       # Apparently may increase buildJet 'runner' to 77GB (instead of 61GB).
       # Apparently may increase Github Actions 'runner' to 59GB (instead of 31GB) .
     - name: Maximize build space
+      if: ( ${{ github.event.inputs.runnerName != 'ubuntu-latest-m' ||  github.event.inputs.runnerName != 'ubuntu-latest-l' ||  github.event.inputs.runnerName != 'ubuntu-latest-h' }} )
       uses: easimon/maximize-build-space@master
       with:
-        #root-reserve-mb: 512
-        root-reserve-mb: 2048
-        #temp-reserve-mb: 100
-        temp-reserve-mb: 300
-        #swap-size-mb: 128
-        swap-size-mb: 192
+        root-reserve-mb: 1625
+        temp-reserve-mb: 50
+        swap-size-mb: 2
+        #remove-dotnet: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
         remove-dotnet: 'true'
+        #remove-android: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
         remove-android: 'true'
+        #remove-haskell: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
         remove-haskell: 'true'
+        #remove-codeql: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
+        remove-codeql: 'true'
+        #remove-docker-images: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
+        remove-docker-images: 'true'
     - uses: actions/checkout@v2
     - name: _getMinimal_cloud
       shell: bash
@@ -106,17 +126,22 @@ jobs:
       # Apparently may increase buildJet 'runner' to 77GB (instead of 61GB).
       # Apparently may increase Github Actions 'runner' to 59GB (instead of 31GB) .
     - name: Maximize build space
+      if: ( ${{ github.event.inputs.runnerName != 'ubuntu-latest-m' ||  github.event.inputs.runnerName != 'ubuntu-latest-l' ||  github.event.inputs.runnerName != 'ubuntu-latest-h' }} )
       uses: easimon/maximize-build-space@master
       with:
-        #root-reserve-mb: 512
-        root-reserve-mb: 2048
-        #temp-reserve-mb: 100
-        temp-reserve-mb: 300
-        #swap-size-mb: 128
-        swap-size-mb: 192
+        root-reserve-mb: 1625
+        temp-reserve-mb: 50
+        swap-size-mb: 2
+        #remove-dotnet: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
         remove-dotnet: 'true'
+        #remove-android: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
         remove-android: 'true'
+        #remove-haskell: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
         remove-haskell: 'true'
+        #remove-codeql: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
+        remove-codeql: 'true'
+        #remove-docker-images: ${{ github.event.inputs.runnerName != 'ubuntu-latest-h' }}
+        remove-docker-images: 'true'
     - uses: actions/checkout@v2
     - name: _getMinimal_cloud
       shell: bash
@@ -126,6 +151,7 @@ jobs:
     - name: _build_cloud_mainline
       shell: bash
       run: |
+        export forceKernel_mainline="${{ github.event.inputs.forceKernel_mainline }}"
         ./ubiquitous_bash.sh _build_cloud_prepare
         ./ubiquitous_bash.sh _build_cloud_mainline
       timeout-minutes: 300
