--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
       # Apparently may increase buildJet 'runner' to 77GB (instead of 61GB).
       # Apparently may increase Github Actions 'runner' to 59GB (instead of 31GB) .
     - name: Maximize build space
-      if: ( ${{ github.event.inputs.runnerName != 'ubuntu-latest-m' ||  github.event.inputs.runnerName != 'ubuntu-latest-l' ||  github.event.inputs.runnerName != 'ubuntu-latest-h' }} )
+      if: ( ${{ github.event.inputs.runnerName != 'ubuntu-latest-m' &&  github.event.inputs.runnerName != 'ubuntu-latest-l' &&  github.event.inputs.runnerName != 'ubuntu-latest-h' }} )
       uses: easimon/maximize-build-space@master
       with:
         root-reserve-mb: 1625
@@ -126,7 +126,7 @@ jobs:
       # Apparently may increase buildJet 'runner' to 77GB (instead of 61GB).
       # Apparently may increase Github Actions 'runner' to 59GB (instead of 31GB) .
     - name: Maximize build space
-      if: ( ${{ github.event.inputs.runnerName != 'ubuntu-latest-m' ||  github.event.inputs.runnerName != 'ubuntu-latest-l' ||  github.event.inputs.runnerName != 'ubuntu-latest-h' }} )
+      if: ( ${{ github.event.inputs.runnerName != 'ubuntu-latest-m' &&  github.event.inputs.runnerName != 'ubuntu-latest-l' &&  github.event.inputs.runnerName != 'ubuntu-latest-h' }} )
       uses: easimon/maximize-build-space@master
       with:
         root-reserve-mb: 1625
