--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -130,13 +130,13 @@ jobs:
     - name: _fetchKernel-mainline
       shell: bash
       run: |
-        [[ "${{ github.event.inputs.forceKernel_mainline }}" != "" ]] && export forceKernel_mainline="${{ github.event.inputs.forceKernel_mainline }}"
+        [[ "${{ github.event.inputs.forceKernel_mainline }}" != "" ]] && [[ "${{ github.event.inputs.forceKernel_mainline }}" != "latest" ]] && export forceKernel_mainline="${{ github.event.inputs.forceKernel_mainline }}"
         #./ubiquitous_bash.sh _fetchKernel-mainline
         ./ubiquitous_bash.sh _fetchKernel-mainline-legacyHTTPS
     - name: _build_cloud_mainline
       shell: bash
       run: |
-        [[ "${{ github.event.inputs.forceKernel_mainline }}" != "" ]] && export forceKernel_mainline="${{ github.event.inputs.forceKernel_mainline }}"
+        [[ "${{ github.event.inputs.forceKernel_mainline }}" != "" ]] && [[ "${{ github.event.inputs.forceKernel_mainline }}" != "latest" ]] && export forceKernel_mainline="${{ github.event.inputs.forceKernel_mainline }}"
         ./ubiquitous_bash.sh _build_cloud_prepare
         ./ubiquitous_bash.sh _build_cloud_mainline
       timeout-minutes: 300
