--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -138,6 +138,7 @@ jobs:
       run: |
         [[ "${{ github.event.inputs.forceKernel_mainline }}" != "" ]] && [[ "${{ github.event.inputs.forceKernel_mainline }}" != "latest" ]] && export forceKernel_mainline="${{ github.event.inputs.forceKernel_mainline }}"
         export current_keepFetch="true"
+        export current_force_bindepOnly="true"
         ./ubiquitous_bash.sh _build_cloud_prepare
         ./ubiquitous_bash.sh _build_cloud_mainline
       timeout-minutes: 300
