--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
       # Apparently may increase buildJet 'runner' to 77GB (instead of 61GB).
       # Apparently may increase Github Actions 'runner' to 59GB (instead of 31GB) .
     - name: Maximize build space
-      if: ${{ github.event.inputs.runnerName == 'ubuntu-latest' }}
+      #if: ${{ github.event.inputs.runnerName == 'ubuntu-latest' }}
       uses: easimon/maximize-build-space@master
       with:
         root-reserve-mb: 1625
@@ -111,7 +111,8 @@ jobs:
           ./_local/_export/linux-lts-amd64-debian.tar.gz
       timeout-minutes: 45
   build_mainline:
-    runs-on: ubuntu-latest
+    runs-on: ${{ github.event.inputs.runnerName == '' && 'ubuntu-latest' || github.event.inputs.runnerName }}
+    #runs-on: ubuntu-latest
     #runs-on: ubuntu-20.04
     #runs-on: buildjet-2vcpu-ubuntu-2004
     #runs-on: buildjet-64vcpu-ubuntu-2004
