--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ on:
         type: choice
         options:
         - ubuntu-latest
+        - ubuntu-latest-m
         - ubuntu-latest-h
       forceKernel_mainline:
         required: false
@@ -34,6 +35,9 @@ on:
         options:
         - latest
         - 6.5.
+        - 6.5.4
+        - 6.4.
+        - 6.4.16
       forceKernel_lts:
         required: false
         default: latest
@@ -41,6 +45,9 @@ on:
         options:
         - latest
         - 6.1.
+      skimfast:
+        type: boolean
+        default: true
   # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
   schedule:
     #- cron: '5 1 * * 6'
@@ -60,6 +67,10 @@ jobs:
     #runs-on: buildjet-2vcpu-ubuntu-2004
     #runs-on: buildjet-64vcpu-ubuntu-2004
     steps:
+    - name: ______________________________ forceKernel_lts-${{ github.event.inputs.forceKernel_lts }}
+      shell: bash
+      run: |
+        true
     - name: users
       shell: bash
       run: |
@@ -95,6 +106,8 @@ jobs:
     - name: _build_cloud_lts
       shell: bash
       run: |
+        #export skimfast=${{ inputs.skimfast }}
+        #echo skimfast $skimfast
         ./ubiquitous_bash.sh _build_cloud_prepare
         ./ubiquitous_bash.sh _build_cloud_lts
       timeout-minutes: 300
@@ -159,6 +172,8 @@ jobs:
     - name: _build_cloud_mainline
       shell: bash
       run: |
+        #export skimfast=${{ inputs.skimfast }}
+        #echo skimfast $skimfast
         export forceKernel_mainline="${{ github.event.inputs.forceKernel_mainline }}"
         ./ubiquitous_bash.sh _build_cloud_prepare
         ./ubiquitous_bash.sh _build_cloud_mainline
