--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,7 +22,7 @@ on:
     inputs:
       runnerName:
         required: false
-        default: ubuntu-latest
+        default: ubuntu-latest-h
         type: choice
         options:
         - ubuntu-latest
@@ -53,7 +53,9 @@ on:
     #- cron: '5 1 * * 6'
     #- cron: '5 1 * * 2,4'
     #- cron: '5 1 * * 2'
-    - cron: '5 1 * * 4'
+    #- cron: '5 1 * * 4'
+    #- cron: '25 6 1 * *'
+    - cron: '25 2 1 * *'
 
 # https://docs.github.com/en/actions/using-jobs/using-concurrency
 concurrency:
