--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -112,6 +112,7 @@ jobs:
         export skimfast=${{ inputs.skimfast }}
         echo skimfast $skimfast
         [[ "${{ github.event.inputs.forceKernel_lts }}" != "" ]] && [[ "${{ github.event.inputs.forceKernel_lts }}" != "latest" ]] && export forceKernel_lts="${{ github.event.inputs.forceKernel_lts }}"
+        export current_force_bindepOnly="true"
         ./ubiquitous_bash.sh _fetchKernel-lts
     - name: _build_cloud_lts
       shell: bash
@@ -234,6 +235,7 @@ jobs:
         export skimfast=${{ inputs.skimfast }}
         echo skimfast $skimfast
         [[ "${{ github.event.inputs.forceKernel_mainline }}" != "" ]] && [[ "${{ github.event.inputs.forceKernel_mainline }}" != "latest" ]] && export forceKernel_mainline="${{ github.event.inputs.forceKernel_mainline }}"
+        export current_force_bindepOnly="true"
         ./ubiquitous_bash.sh _fetchKernel-mainline
     - name: _build_cloud_mainline
       shell: bash
