--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,9 @@ on:
     #- cron: '5 1 * * 6'
     #- cron: '5 1 * * 2,4'
     #- cron: '5 1 * * 2'
-    - cron: '5 1 * * 4'
+    #- cron: '5 1 * * 4'
+    #- cron: '25 6 1 * *'
+    - cron: '25 2 25 * *'
 
 # https://docs.github.com/en/actions/using-jobs/using-concurrency
 concurrency:
