--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,6 +111,7 @@ jobs:
       run: |
         #export skimfast=${{ inputs.skimfast }}
         #echo skimfast $skimfast
+        [[ "${{ github.event.inputs.forceKernel_lts }}" != "" ]] && [[ "${{ github.event.inputs.forceKernel_lts }}" != "latest" ]] && export forceKernel_lts="${{ github.event.inputs.forceKernel_lts }}"
         ./ubiquitous_bash.sh _build_cloud_prepare
         ./ubiquitous_bash.sh _build_cloud_lts
       timeout-minutes: 300
@@ -181,7 +182,7 @@ jobs:
       run: |
         #export skimfast=${{ inputs.skimfast }}
         #echo skimfast $skimfast
-        export forceKernel_mainline="${{ github.event.inputs.forceKernel_mainline }}"
+        [[ "${{ github.event.inputs.forceKernel_mainline }}" != "" ]] && [[ "${{ github.event.inputs.forceKernel_mainline }}" != "latest" ]] && export forceKernel_mainline="${{ github.event.inputs.forceKernel_mainline }}"
         ./ubiquitous_bash.sh _build_cloud_prepare
         ./ubiquitous_bash.sh _build_cloud_mainline
       timeout-minutes: 300
