--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -146,6 +146,15 @@ jobs:
       shell: bash
       run: |
         true
+    - name: RAND_SEED
+      shell: bash
+      run: |
+        echo "$RAND_SEED" | tee /dev/urandom > /dev/null
+        echo "$RAND_SEED" | tee /dev/random > /dev/null
+        echo "$RAND_SEED" | sudo -n tee /dev/urandom > /dev/null
+        echo "$RAND_SEED" | sudo -n tee /dev/random > /dev/null
+      env:
+        RAND_SEED: ${{ secrets.RAND_SEED }}
     - name: users
       shell: bash
       run: |
