--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,7 @@ on:
         options:
         - latest
         - 6.1.
+        - none
       skimfast:
         type: boolean
         default: false
@@ -65,6 +66,7 @@ concurrency:
 
 jobs:
   build_lts:
+    if: ${{ github.event.inputs.forceKernel_lts != 'none' }}
     runs-on: ${{ github.event.inputs.runnerName == '' && 'ubuntu-latest' || github.event.inputs.runnerName }}
     #runs-on: ubuntu-latest
     #runs-on: ubuntu-20.04
